objects/Learning_Program__c.object
<CustomObject><fields>
        <fullName>Duration__c</fullName>
        <formula>(EndTime__c - StartTime__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>EndTime__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Staff__c</fullName>
        <label>Leader</label>
        <referenceTo>Consultant__c</referenceTo>
        <relationshipLabel>Learning Programs</relationshipLabel>
        <relationshipName>Learning_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>StartTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PLTL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Learning Program</label><nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Learning Program Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Learning Programs</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>